Test add general fb comment

--- a/404.html
+++ b/404.html
@@ -56,6 +56,16 @@
 <span>Tags</span>
 </a>
 </li>
+<li>
+<a href=https://www.tekcatz.com/about/ title="About Us">
+<span>About Us</span>
+</a>
+</li>
+<li>
+<a href=https://www.tekcatz.com/donate/ title=Donate>
+<span>Donate</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
