--- a/index.html
+++ b/index.html
@@ -59,16 +59,33 @@
 <span>Tags</span>
 </a>
 </li>
+<li>
+<a href=https://www.tekcatz.com/about/ title="About Us">
+<span>About Us</span>
+</a>
+</li>
+<li>
+<a href=https://www.tekcatz.com/donate/ title=Donate>
+<span>Donate</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
 <main class=main>
 <article class="first-entry home-info">
 <header class=entry-header>
-<h1>Meow meow 😺</h1>
+<h1>Meow Meow 😺</h1>
 </header>
 <section class=entry-content>
-<p>Welcome to my blog</p>
+<p><ul>
+<li>Hello, chào mừng mọi người đã ghé qua blog của tụi mình. 👋</li>
+<li></li>
+<li>Tụi mình là nhóm mấy thằng đam mê công nghệ (<strong>Tek</strong>), thích mòe (<strong>Cat</strong>) và đều là GenZ (<strong>Z</strong>) nên viết blog này để chia sẻ thêm kiến thức về công nghệ và có thể là những chủ đề khác nữa.</li>
+<li></li>
+<li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
+</ul>
+</p>
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
@@ -77,14 +94,14 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>My 1st post
+<h2>Test_fb
 </h2>
 </header>
 <section class=entry-content>
-<p>Test</p>
+<p>Title Content</p>
 </section>
-<footer class=entry-footer><span title="2020-09-15 11:30:03 +0000 +0000">September 15, 2020</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to My 1st post" href=https://www.tekcatz.com/posts/my-first-post/></a>
+<footer class=entry-footer><span title="2022-01-16 00:16:17 +0700 +07">January 16, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to Test_fb" href=https://www.tekcatz.com/posts/test_fb/></a>
 </article>
 </main>
 <footer class=footer>
