--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 <meta name=twitter:description content="Trang blog dành cho">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":[]}</script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KD9ZSVHEN5"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KD9ZSVHEN5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-KD9ZSVHEN5');
-</script>
-</head>
+</script></head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
@@ -100,6 +99,17 @@
 <div class=social-icons>
 </div>
 </footer>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>Test_push
+</h2>
+</header>
+<section class=entry-content>
+<p></p>
+</section>
+<footer class=entry-footer><span title="2022-01-16 02:09:27 +0700 +07">January 16, 2022</span>&nbsp;·&nbsp;0 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to Test_push" href=https://www.tekcatz.com/posts/test_push/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
