--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,7 @@ About Us
 </div>
 </details>
 </div>
-<div class=post-content><h1>😺</h1><h1 id=về-tụi-mình>Về tụi mình<a hidden class=anchor aria-hidden=true href=#về-tụi-mình>#</a></h1>
+<div class=post-content><h1 id=về-tụi-mình>Về tụi mình<a hidden class=anchor aria-hidden=true href=#về-tụi-mình>#</a></h1>
 <p>Tụi mình là nhóm mấy thằng đam mê công nghệ (<strong>Tek</strong>), thích mòe (<strong>Cat</strong>) và đều là GenZ (<strong>Z</strong>) nên viết blog này để chia sẻ thêm kiến thức về công nghệ và có thể là những chủ đề khác nữa.</p>
 <p>Nhóm hiện tại có 11 thành viên và do nhiều quá nên mình lười ghi hết tên ra nhưng các bạn sẽ biết được tên các thành viên thông qua các bài viết trên blog. Lý do mà nhóm lập ra blog này thì thật ra cũng chả có lý do gì cả 🤷. Tự nhiên 1 buổi chiều thứ 7 mình hứng lên nên định viết blog, mà viết một mình thì chán với dễ bỏ nên rủ thêm mấy đứa bạn lập blog viết chung cho vui.</p>
 <p>Chủ đề mà nhóm sẽ tập trung viết chính sẽ là về công nghệ, ngoài ra có thể thêm mấy chủ đề xàm xí khác nữa nếu có nhiều người yêu cầu (đó là nếu có người chịu đọc blog 😞).</p>
