--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta name=twitter:image content="https://www.tekcatz.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="TekCatZ">
 <meta name=twitter:description content="Trang blog dành cho">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":[]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.tekcatz.com/"]}</script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KD9ZSVHEN5"></script>
 <script>
@@ -97,6 +97,8 @@
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
+<a href=https://www.tekcatz.com/ target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
+</a>
 </div>
 </footer>
 </article>
