--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
 <li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
 </ul>
 </p>
+<div style="margin: 20px 0; display: flex; flex-wrap: wrap; justify-content: space-around;">
+  <div style="width: 100%; max-width: 510px !important; margin: 5px;">
+      <input id="email-subscribe-inp" placeholder="Enter your email" type="email" style="border: 1px solid var(--primary); color: var(--primary); border-radius: 4px; font-size: 16px; padding: 5px; width: 100%;">
+  </div>
+  <div style="flex-grow: 1; max-width: 510px !important; margin: 5px;">
+      <button id="email-subscribe-btn" style="outline: none; border: 1px solid orange; border-radius: 4px; font-weight: 500; background-color: orange; font-size: 16px; padding: 5px; width: 100%">Subscribe</button>
+  </div>
+</div>
+<script>
+  document.getElementById('email-subscribe-btn').addEventListener('click', function(e) {
+      console.log(document.getElementById('email-subscribe-inp').value);
+  });
+</script>
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
