--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </p>
 <div style="margin: 20px 0; display: flex; flex-wrap: wrap; justify-content: space-around;">
   <div style="width: 100%; max-width: 510px !important; margin: 5px;">
-      <input id="email-subscribe-inp" placeholder="Enter your email" type="email" style="border: 1px solid var(--primary); color: var(--primary); border-radius: 4px; font-size: 16px; padding: 5px; width: 100%;">
+      <input id="email-subscribe-inp" placeholder="Enter your email to subscribe" type="email" style="border: 1px solid var(--primary); color: var(--primary); border-radius: 4px; font-size: 16px; padding: 5px; width: 100%;">
   </div>
   <div style="flex-grow: 1; max-width: 510px !important; margin: 5px;">
       <button id="email-subscribe-btn" style="outline: none; border: 1px solid orange; border-radius: 4px; font-weight: 500; background-color: orange; font-size: 16px; padding: 5px; width: 100%">Subscribe</button>
