Fix margin subscribe button

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 <li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
 </ul>
 </p>
-<p style="margin-top: 20px;">Nhập email để nhận thông báo khi có bài viết mới</p>
-<div style="margin: 10px 0 20px 0; display: flex; flex-wrap: wrap; justify-content: space-around;">
-  <div style="width: 100%; max-width: 510px !important; margin: 5px;">
+<p style="margin-top: 20px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
+<div style="margin: 5px 0 20px 0; display: flex; flex-wrap: wrap; justify-content: space-around;">
+  <div style="width: 100%; max-width: 510px !important; margin: 0 5px 5px 5px;">
       <input id="email-subscribe-inp" placeholder="Nhập email để nhận thông báo" type="email" style="border: 1px solid var(--primary); color: var(--primary); border-radius: 4px; font-size: 16px; padding: 5px; width: 100%;">
   </div>
-  <div style="flex-grow: 1; max-width: 510px !important; margin: 5px;">
+  <div style="flex-grow: 1; max-width: 510px !important; margin: 0 5px 5px 5px;">
       <button id="email-subscribe-btn" style="outline: none; border: 1px solid orange; border-radius: 4px; font-weight: 500; background-color: orange; font-size: 16px; padding: 5px; width: 100%">Đăng ký</button>
   </div>
 </div>
