--- a/about/index.html
+++ b/about/index.html
@@ -70,6 +70,11 @@
 <span>Donate</span>
 </a>
 </li>
+<li>
+<a href=https://www.tekcatz.com/privacy-policy title="Privacy & Policy">
+<span>Privacy & Policy</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
