--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 <meta name=twitter:image content="https://www.tekcatz.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="TekCatZ">
 <meta name=twitter:description content="Trang blog dành cho">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.tekcatz.com/"]}</script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -102,16 +100,16 @@
 <li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
 </ul>
 </p>
-<p style="margin-top: 20px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
+<p style="margin-top: 20px; margin-bottom: 10px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
 
-<div class="input-group mb-3">
-  <input id="email-subscribe-inp" type="email" class="form-control" placeholder="Nhập email" aria-label="Recipient's username" aria-describedby="button-addon2">
-  <button id="email-subscribe-btn" class="btn btn-outline-secondary" type="button" id="button-addon2">Đăng ký</button>
+<div style="display: flex; width: 100%; color: inherit;">
+  <input style="border: 1px solid; border-right: none; border-color: inherit; color: inherit; flex-grow: 1; padding: 6px 10px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;" id="email-subscribe-inp" type="email" placeholder="Nhập email">
+  <button style="border: 1px solid darkorange; font-weight: 500; width: 100px; padding: 6px 10px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; background-color: darkorange;" id="email-subscribe-btn">Đăng ký</button>
 </div>
 
 <script>
   document.getElementById('email-subscribe-btn').addEventListener('click', function(e) {
-      console.log(document.getElementById('email-subscribe-inp').value);
+      console.log(axios);
   });
 </script>
 </section>
