--- a/index.html
+++ b/index.html
@@ -100,16 +100,26 @@
 <li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
 </ul>
 </p>
-<p style="margin-top: 20px; margin-bottom: 10px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
-
+<p id="type-email-p" style="margin-top: 20px; margin-bottom: 10px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
+<div id="email-error-div" style="color: red;"></div>
 <div style="display: flex; width: 100%; color: inherit;">
   <input style="border: 1px solid; border-right: none; border-color: inherit; color: inherit; flex-grow: 1; padding: 6px 10px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;" id="email-subscribe-inp" type="email" placeholder="Nhập email">
   <button style="border: 1px solid darkorange; font-weight: 500; width: 100px; padding: 6px 10px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; background-color: darkorange;" id="email-subscribe-btn">Đăng ký</button>
 </div>
 
 <script>
-  document.getElementById('email-subscribe-btn').addEventListener('click', function(e) {
-      console.log(axios);
+  document.getElementById('email-subscribe-btn').addEventListener('click', async function(e) {
+      document.getElementById('email-error-div').innerHTML = '';
+      const email = document.getElementById('email-subscribe-inp').value;
+      if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(email)) {
+          const result = await axios.post('https://1u75smgwn4.execute-api.ap-southeast-1.amazonaws.com/subscribe-email', {
+              email,
+          });
+          console.log(result);
+      }
+      else {
+        document.getElementById('email-error-div').appendChild(document.createTextNode('Email không hợp lệ'));
+      }
   });
 </script>
 </section>
