--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name=robots content="index, follow">
 <title>TekCatZ</title>
 <meta name=keywords content="Blog,PaperMod">
-<meta name=description content="Trang blog dành cho">
+<meta name=description content="Trang blog về công nghệ cũng như những chủ đề khác của nhóm TekCatZ">
 <meta name=author content="Me">
 <link rel=canonical href=https://www.tekcatz.com/>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
