--- a/index.html
+++ b/index.html
@@ -1,38 +1,4 @@
-<!doctype html><html lang=en dir=auto>
-<head><meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=robots content="index, follow">
-<title>TekCatZ</title>
-<meta name=keywords content="Blog,PaperMod">
-<meta name=description content="Trang blog về công nghệ cũng như những chủ đề khác của nhóm TekCatZ">
-<meta name=author content="Me">
-<link rel=canonical href=https://www.tekcatz.com/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=16x16 href=https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=32x32 href=https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E>
-<link rel=apple-touch-icon href=https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E>
-<link rel=mask-icon href=https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E>
-<meta name=theme-color content="#2e2e33">
-<meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.92.0">
-<link rel=alternate type=application/rss+xml href=https://www.tekcatz.com/index.xml>
-<link rel=alternate type=application/json href=https://www.tekcatz.com/index.json>
-<noscript>
-<style>#theme-toggle,.top-link{display:none}</style>
-<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="TekCatZ">
-<meta property="og:description" content="Trang blog dành cho">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.tekcatz.com/"><meta property="og:image" content="https://www.tekcatz.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="TekCatZ">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://www.tekcatz.com/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content="TekCatZ">
-<meta name=twitter:description content="Trang blog dành cho">
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.tekcatz.com/"]}</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!doctype html><html lang=en dir=auto><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name=robots content="index, follow"><title>TekCatZ</title><meta name=keywords content="Blog,PaperMod"><meta name=description content="Trang blog dành cho dành cho những người đam mê công nghệ và thích mèo"><meta name=author content="TekCatZ"><link rel=canonical href=https://www.tekcatz.com/><link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style><link rel=icon href=https://www.tekcatz.com/images/logo.png><meta name=theme-color content="#2e2e33"><meta name=msapplication-TileColor content="#2e2e33"><meta name=generator content="Hugo 0.95.0"><link rel=alternate type=application/rss+xml href=https://www.tekcatz.com/index.xml><link rel=alternate type=application/json href=https://www.tekcatz.com/index.json><noscript><style>#theme-toggle,.top-link{display:none}</style><style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style></noscript><meta property="og:title" content="TekCatZ"><meta property="og:description" content="Trang blog dành cho những người đam mê công nghệ và thích mèo"><meta property="og:type" content="website"><meta property="og:url" content="https://www.tekcatz.com/"><meta property="og:image" content="https://www.tekcatz.com/images/logo.png"><meta property="og:site_name" content="TekCatZ"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://www.tekcatz.com/images/logo.png"><meta name=twitter:title content="TekCatZ"><meta name=twitter:description content="Trang blog dành cho những người đam mê công nghệ và thích mèo"><script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"TekCatZ","url":"https://www.tekcatz.com","description":"Trang blog dành cho những người đam mê công nghệ và thích mèo","thumbnailUrl":"https://www.tekcatz.com/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.tekcatz.com/"]}</script><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KD9ZSVHEN5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -40,121 +6,8 @@
   gtag('js', new Date());
 
   gtag('config', 'G-KD9ZSVHEN5');
-</script></head>
-<body class=list id=top>
-<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
-<header class=header>
-<nav class=nav>
-<div class=logo>
-<a href=https://www.tekcatz.com accesskey=h title="TekCatZ (Alt + H)">TekCatZ</a>
-<span class=logo-switches>
-<button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
-</button>
-</span>
-</div>
-<ul id=menu>
-<li>
-<a href=https://www.tekcatz.com/search/ title="Search (Alt + /)" accesskey=/>
-<span>Search</span>
-</a>
-</li>
-<li>
-<a href=https://www.tekcatz.com/categories/ title=Categories>
-<span>Categories</span>
-</a>
-</li>
-<li>
-<a href=https://www.tekcatz.com/tags/ title=Tags>
-<span>Tags</span>
-</a>
-</li>
-<li>
-<a href=https://www.tekcatz.com/about/ title="About Us">
-<span>About Us</span>
-</a>
-</li>
-<li>
-<a href=https://www.tekcatz.com/donate/ title=Donate>
-<span>Donate</span>
-</a>
-</li>
-<li>
-<a href=https://www.tekcatz.com/privacy-policy title="Privacy & Policy">
-<span>Privacy & Policy</span>
-</a>
-</li>
-</ul>
-</nav>
-</header>
-<main class=main>
-<article class="first-entry home-info">
-<header class=entry-header>
-<h1>Meow Meow 😺</h1>
-</header>
-<section class=entry-content>
-<p><ul>
-<li>Hello, chào mừng mọi người đã ghé qua blog của tụi mình. 👋</li>
-<li></li>
-<li>Tụi mình là nhóm mấy thằng đam mê công nghệ (<strong>Tek</strong>), thích mòe (<strong>Cat</strong>) và đều là GenZ (<strong>Z</strong>) nên viết blog này để chia sẻ thêm kiến thức về công nghệ và có thể là những chủ đề khác nữa.</li>
-<li></li>
-<li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li>
-</ul>
-</p>
-<p id="type-email-p" style="margin-top: 20px; margin-bottom: 10px; color: var(--primary)">Nhập email để nhận thông báo khi có bài viết mới</p>
-<div id="email-error-div" style="color: red;"></div>
-<div id="email-succeed-div" style="color: green;"></div>
-<div style="display: flex; width: 100%; color: inherit;">
-  <input style="border: 1px solid; border-right: none; border-color: inherit; color: inherit; flex-grow: 1; padding: 6px 10px; border-top-left-radius: 4px; border-bottom-left-radius: 4px;" id="email-subscribe-inp" type="email" placeholder="Nhập email">
-  <button style="border: 1px solid darkorange; font-weight: 500; width: 100px; padding: 6px 10px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; background-color: darkorange;" id="email-subscribe-btn">Đăng ký</button>
-</div>
-
-<script>
-  document.getElementById('email-subscribe-btn').addEventListener('click', async function(e) {
-      document.getElementById('email-error-div').innerHTML = '';
-      document.getElementById('email-succeed-div').innerHTML = '';
-      const email = document.getElementById('email-subscribe-inp').value;
-      if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(email)) {
-          try {
-              const result = await axios.post('https://1u75smgwn4.execute-api.ap-southeast-1.amazonaws.com/subscribe-email', {
-                  email,
-              });
-              if (result.status === 200) {
-                  document.getElementById('email-succeed-div').appendChild(document.createTextNode('Đăng ký email thành công'));
-              }
-              else {
-                  throw new Error(result.data);
-              }
-          }
-          catch (error) {
-              document.getElementById('email-error-div').appendChild(document.createTextNode(error.message));
-          }
-      }
-      else {
-        document.getElementById('email-error-div').appendChild(document.createTextNode('Email không hợp lệ'));
-      }
-  });
-</script>
-</section>
-<footer class=entry-footer>
-<div class=social-icons>
-<a href=https://www.tekcatz.com/ target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
-</a>
-</div>
-</footer>
-</article>
-</main>
-<footer class=footer>
-<span>&copy; 2022 <a href=https://www.tekcatz.com>TekCatZ</a></span>
-<span>
-Powered by
+</script></head><body class=list id=top><script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add("dark"):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove("dark"):window.matchMedia("(prefers-color-scheme: dark)").matches&&document.body.classList.add("dark")</script><header class=header><nav class=nav><div class=logo><a href=https://www.tekcatz.com accesskey=h title="TekCatZ (Alt + H)">TekCatZ</a>
+<span class=logo-switches><button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg></button></span></div><ul id=menu><li><a href=https://www.tekcatz.com/search/ title="Search (Alt + /)" accesskey=/><span>Search</span></a></li><li><a href=https://www.tekcatz.com/categories/ title=Categories><span>Categories</span></a></li><li><a href=https://www.tekcatz.com/tags/ title=Tags><span>Tags</span></a></li><li><a href=https://www.tekcatz.com/about/ title="About Us"><span>About Us</span></a></li><li><a href=https://www.tekcatz.com/donate/ title=Donate><span>Donate</span></a></li><li><a href=https://www.tekcatz.com/privacy-policy title="Privacy & Policy"><span>Privacy & Policy</span></a></li></ul></nav></header><main class=main><article class="first-entry home-info"><header class=entry-header><h1>Meow Meow 😺</h1></header><section class=entry-content><p><ul><li>Hello, chào mừng mọi người đã ghé qua blog của tụi mình. 👋</li><li></li><li>Tụi mình là nhóm mấy thằng đam mê công nghệ (<strong>Tek</strong>), thích mòe (<strong>Cat</strong>) và đều là GenZ (<strong>Z</strong>) nên viết blog này để chia sẻ thêm kiến thức về công nghệ và có thể là những chủ đề khác nữa.</li><li></li><li>Bookmark page lại rồi check thường xuyên để xem các bài viết mới nhất. Ai thấy hay có thể bấm nút <a href=https://www.tekcatz.com/donate/><strong>Donate</strong></a> phía trên để ủng hộ chúng mình ít tiền nuôi mòe nhé. 🍲</li></ul></p></section><footer class=entry-footer><div class=social-icons><a href=https://www.tekcatz.com/ target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg></a></div></footer></article></main><footer class=footer><span>&copy; 2022 <a href=https://www.tekcatz.com>TekCatZ</a></span>
+<span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
-</span>
-</footer>
-<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
-</a>
-<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
-<script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
-<script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
-</body>
-</html>
+        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a></span></footer><a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg></a><script>let menu=document.getElementById("menu");menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(e=>{e.addEventListener("click",function(t){t.preventDefault();var e=this.getAttribute("href").substr(1);window.matchMedia("(prefers-reduced-motion: reduce)").matches?document.querySelector(`[id='${decodeURIComponent(e)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(e)}']`).scrollIntoView({behavior:"smooth"}),e==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${e}`)})})</script><script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script><script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove("dark"),localStorage.setItem("pref-theme","light")):(document.body.classList.add("dark"),localStorage.setItem("pref-theme","dark"))})</script></body></html>
